fixed scrollbar, added a 'clear cache' button, fixed the recent files buttons (they now correctly change the db), some general ui fixes, loader spinner added (npm dependency: react-loader-spinner)

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -25,6 +25,29 @@ body {
 body * {
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    overflow-wrap: break-word;
+    white-space: pre-line;
+}
+
+body button {
+    display: block;
+    padding: 10px;
+    width: 100%;
+    margin: 0;
+    background-color: var(--button);
+    border: none;
+    cursor: pointer ;
+}
+
+body button:hover {
+    background-color: var(--hover);
+}
+
+.loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25vh;
 }
 
 .navbar {
@@ -41,11 +64,17 @@ body * {
 .viewsContainer {
     width: 100%;
     height: 100%;
+    flex-shrink: 3;
+}
+
+.viewsContainer * {
+    flex-shrink: inherit;
 }
 
 .sidebarL {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     border-right: 1px solid var(--border);
     height: 90vh;
     width: 25vh;
@@ -60,6 +89,12 @@ body * {
     background-color: var(--hover);
 }
 
+.toolPanel {
+    background-color: var(--bg-main-dark);
+    border-bottom: 1px solid var(--border);
+}
+
+
 .queryPanel {
     width: 100%;
     height: 50%;
@@ -73,6 +108,7 @@ body * {
     padding: 0px;
     border: none;
     border-bottom: 1px solid var(--border);
+    resize: vertical;
 }
 
 .itemViewPanel {
@@ -85,18 +121,22 @@ body * {
     display: flex;
     background-color: var(--bg-main-dark);
     gap: 8px;
+    border-bottom: 1px solid var(--border);
 }
 
 .sqlObjectContainer {
+    z-index: 1;
     overflow: scroll;
+    max-height: 86vh;
+    margin-bottom: 15px;
 }
 
 .sqlObject {
+    z-index: 1;
     display: flex;
     flex-direction: column;
     background-color: var(--object);
     border-left: 4px solid white;
-    min-width: 100%;
     max-width: 100%;
     min-height: 15vh;
     max-height: 30vh;
@@ -113,6 +153,8 @@ body * {
 
 
 #app {
-    height: 100vh;
+    height: calc(100vh - 70px);
+    min-height: 100%;
     text-align: center;
 }
+
